# test-case-preliminary-task

./: .gitignore  pyproject.toml
pipeline/: config.py  etl.py  models.py  utils.py
pipeline/test/: test_etl.py  test_utils.py
