[project]
name = "test-case-preliminary-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.1",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.36",
    "utils>=1.0.2",
]
